# nostr-rs

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
proto/: Cargo.toml
proto/src/event/: mod.rs
proto/src/keys/: mod.rs
